--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "babel-preset-env": "^1.5.2",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
+    "html-string-replace-webpack-plugin": "^1.0.5",
     "html-webpack-plugin": "^2.28.0",
-    "webpack": "^2.6.1"
+    "md5-file": "^3.1.1",
+    "webpack": "^3.4.1"
   },
   "dependencies": {
     "lodash": "^4.17.4",
