--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "babel-preset-env": "^1.5.2",
     "clean-webpack-plugin": "^0.1.16",
     "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
     "html-string-replace-webpack-plugin": "^1.0.5",
     "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
     "webpack": "^3.4.1"
   },
   "dependencies": {
