--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "start": "webpack --config ./webpack.dev.js",
+    "build": "webpack --config ./webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +22,8 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "webpack": "^3.4.1"
+    "webpack": "^3.4.1",
+    "webpack-merge": "^4.1.0"
   },
   "dependencies": {
     "lodash": "^4.17.4",
