--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --config ./webpack.dev.js",
+    "start": "webpack-dev-server --config ./webpack.dev.js",
+    "start-fp": "webpack-dev-server --config ./webpack.dev.js --port 0",
     "build": "webpack --config ./webpack.prod.js"
   },
   "author": "",
@@ -24,6 +24,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.9.2",
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
