--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.dev.js",
-    "start-fp": "webpack-dev-server --config ./webpack.dev.js --port 0",
+    "start:test": "webpack --config ./webpack.dev.js",
+    "start:fp": "webpack-dev-server --config ./webpack.dev.js --port 0",
     "build": "webpack --config ./webpack.prod.js"
   },
   "author": "",
