--- a/package.json
+++ b/package.json
@@ -5,31 +5,35 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.dev.js",
-    "start:test": "webpack --config ./webpack.dev.js",
-    "start:fp": "webpack-dev-server --config ./webpack.dev.js --port 0",
-    "build": "webpack --config ./webpack.prod.js"
+    "start-fp": "webpack-dev-server --config ./webpack.dev.js --port 0",
+    "build": "webpack --config ./webpack.prod.js",
+    "build-dev": "webpack --config ./webpack.dev.js"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@types/react": "^16.0.18",
+    "@types/react-dom": "^16.0.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
+  },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
     "clean-webpack-plugin": "^0.1.17",
-    "copy-webpack-plugin": "^4.1.1",
-    "css-loader": "^0.28.4",
-    "file-loader": "^0.11.2",
+    "copy-webpack-plugin": "^4.2.0",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
     "html-string-replace-webpack-plugin": "^1.0.5",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.9.2",
+    "style-loader": "^0.19.0",
+    "ts-loader": "^3.1.0",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.8.0",
+    "tslint-loader": "^3.5.3",
+    "typescript": "^2.5.3",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3",
     "webpack-merge": "^4.1.0"
-  },
-  "dependencies": {
-    "lodash": "^4.17.4",
-    "underscore": "^1.8.3"
   }
 }
