--- a/package.json
+++ b/package.json
@@ -8,7 +8,18 @@
     "start:fp": "webpack-dev-server --config ./webpack.dev.js --port 0",
     "build": "webpack --config ./webpack.prod.js",
     "build:dev": "webpack --config ./webpack.dev.js",
-    "lint": "eslint ./src"
+    "lint": "eslint ./src",
+    "test": "echo \"No test specified\" && exit 0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && npm test"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json}": [
+      "eslint"
+    ]
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +36,8 @@
     "eslint-loader": "^2.0.0",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.0.0-rc.1",
+    "lint-staged": "^7.0.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
