--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "webpack-test",
-  "version": "1.1.0",
+  "name": "webpack-config",
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -24,25 +24,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "7",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.17",
+    "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.2.0",
-    "css-loader": "^0.28.4",
-    "eslint": "^4.19.1",
+    "css-loader": "^2.1.0",
+    "eslint": "^5.11.1",
     "eslint-loader": "^2.0.0",
-    "file-loader": "^1.1.5",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.0.0-rc.1",
-    "lint-staged": "^7.0.4",
+    "lint-staged": "^8.1.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^7.0.1",
-    "style-loader": "^0.21.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.14",
+    "webpack-cli": "^3.2.0",
     "webpack-dev-server": "^3.1.3",
     "webpack-merge": "^4.1.0"
   },
