--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "7",
-    "babel-preset-env": "^1.6.1",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
     "compression-webpack-plugin": "^2.0.0",
@@ -35,6 +36,7 @@
     "css-loader": "^2.1.0",
     "eslint": "^5.11.1",
     "eslint-loader": "^2.0.0",
+    "eslint-plugin-class-property": "^1.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.0.0-rc.1",
