--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "7",
     "babel-plugin-lodash": "^3.3.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
