--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,11 @@
 {
   "presets": [
     "babel-preset-env",
+    "babel-preset-react",
     "stage-0"
   ],
   "plugins": [
+    "react-hot-loader/babel",
     "lodash"
   ]
 }
