--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-plugin-lodash": "^3.3.4",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
     "compression-webpack-plugin": "^2.0.0",
@@ -38,6 +39,7 @@
     "eslint": "^5.11.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-class-property": "^1.1.0",
+    "eslint-plugin-react": "^7.12.2",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.0.0-rc.1",
@@ -53,6 +55,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
-    "underscore": "^1.8.3"
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-hot-loader": "^4.6.3"
   }
 }
