--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,9 @@
 {
   "presets": [
-    "babel-preset-env",
-    "stage-0"
+    ["@babel/preset-env", { "targets": "> 0.25%, not dead" }]
   ],
   "plugins": [
+    "@babel/plugin-proposal-class-properties",
     "lodash"
   ]
 }
