--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
   "author": "Łukasz Sałajczyk",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.2.3",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "7",
+    "babel-loader": "^8.0.5",
     "babel-plugin-lodash": "^3.3.4",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^1.0.0",
     "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.2.0",
