--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-syntax-dynamic-import",
     "react-hot-loader/babel",
     "lodash"
   ]
