--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-loader": "^2.1.2",
     "eslint-plugin-class-property": "^1.1.0",
     "eslint-plugin-react": "^7.12.2",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^2.3.0",
