--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
       "pre-commit": "lint-staged && npm test"
     }
   },
+  "engines": {
+    "node": ">=12.0.0 <13.0.0"
+  },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
       "eslint"
