--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "test": "echo \"No test specified\" && exit 0",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
+  "engines": {
+    "node": ">=12.0.0 <13.0.0"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged && npm test"
