--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.0.0",
+    "@hot-loader/react-dom": "^16.10.2",
     "@storybook/addon-info": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "babel-eslint": "^10.0.3",
