--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "@hot-loader/react-dom": "^16.10.2",
     "@storybook/addon-info": "^5.0.11",
     "@storybook/react": "^5.0.11",
+    "@types/lodash": "^4.14.144",
+    "@types/react": "^16.9.9",
+    "@types/react-dom": "^16.9.2",
+    "@types/react-hot-loader": "^4.1.0",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-lodash": "^3.3.4",
@@ -57,6 +62,7 @@
     "sass-loader": "^8.0.0",
     "sass-resources-loader": "^2.0.0",
     "style-loader": "^1.0.0",
+    "typescript": "^3.6.4",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1",
