Small changes for TS config
* Add some flags for tsc
* Use babel only on development mode

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "moduleResolution": "node",
     "lib": ["es6", "dom"],
     "allowSyntheticDefaultImports": true,
+    "noImplicitReturns": true,
+    "strict": true,
   },
   "include": [
     "src/**/*",
