--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "lib": ["es6", "dom"],
     "allowSyntheticDefaultImports": true,
     "noImplicitReturns": true,
-    "strict": true,
+    "strict": true
   },
   "include": [
     "src/**/*",
