--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack --config ./webpack.prod.js",
     "build:dev": "webpack --config ./webpack.dev.js",
     "lint": "eslint ./src --ext .js --ext .jsx",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "mocha"
   },
   "husky": {
     "hooks": {
@@ -45,6 +45,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^2.3.0",
     "lint-staged": "^9.4.2",
+    "mocha": "^6.2.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "sass-resources-loader": "^2.0.0",
