--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack --config ./webpack.prod.js",
     "build:dev": "webpack --config ./webpack.dev.js",
     "lint": "eslint ./src --ext .ts --ext .tsx",
-    "test": "mocha",
+    "test": "ts-mocha test/**/*",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "engines": {
@@ -37,6 +37,7 @@
     "@storybook/addon-info": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "@types/lodash": "^4.14.144",
+    "@types/mocha": "^7.0.1",
     "@types/react": "^16.9.9",
     "@types/react-dom": "^16.9.2",
     "@types/react-hot-loader": "^4.1.0",
@@ -74,6 +75,7 @@
   "dependencies": {
     "lodash": "^4.17.4",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2"
+    "react-dom": "^16.10.2",
+    "ts-mocha": "^6.0.0"
   }
 }
