--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-react": "^7.0.0",
     "@hot-loader/react-dom": "^16.10.2",
     "@storybook/addon-info": "^5.0.11",
+    "@storybook/preset-typescript": "1.1.0",
     "@storybook/react": "^5.0.11",
     "@types/lodash": "^4.14.144",
     "@types/mocha": "^7.0.1",
@@ -62,10 +63,13 @@
     "lint-staged": "^9.4.2",
     "mocha": "^6.2.2",
     "node-sass": "^4.12.0",
+    "react-docgen-typescript-loader": "^3.6.0",
     "react-hot-loader": "^4.12.15",
     "sass-loader": "^8.0.0",
     "sass-resources-loader": "^2.0.0",
     "style-loader": "^1.0.0",
+    "ts-loader": "^6.2.1",
+    "ts-mocha": "^6.0.0",
     "typescript": "^3.6.4",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.3.2",
@@ -75,7 +79,6 @@
   "dependencies": {
     "lodash": "^4.17.4",
     "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "ts-mocha": "^6.0.0"
+    "react-dom": "^16.10.2"
   }
 }
