--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "webpack --config ./webpack.prod.js",
     "build:dev": "webpack --config ./webpack.dev.js",
     "lint": "eslint ./src --ext .ts --ext .tsx",
-    "test": "ts-mocha test/**/*",
-    "storybook": "start-storybook -p 9001 -c .storybook"
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "test": "jest"
   },
   "engines": {
     "node": ">=12.0.0 <13.0.0"
@@ -37,6 +37,7 @@
     "@storybook/addon-info": "^5.0.11",
     "@storybook/preset-typescript": "3.0.0",
     "@storybook/react": "^5.0.11",
+    "@types/jest": "^25.2.1",
     "@types/lodash": "^4.14.144",
     "@types/mocha": "^7.0.1",
     "@types/react": "^16.9.9",
@@ -57,19 +58,20 @@
     "eslint-plugin-class-property": "^1.1.0",
     "eslint-plugin-react": "^7.12.2",
     "eslint-plugin-react-hooks": "^3.0.0",
+    "expect": "^25.3.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.0.3",
     "husky": "^4.2.3",
+    "jest": "^25.3.0",
     "lint-staged": "^10.1.0",
-    "mocha": "^7.1.1",
     "node-sass": "^4.12.0",
     "react-docgen-typescript-loader": "^3.6.0",
     "react-hot-loader": "^4.12.15",
     "sass-loader": "^8.0.0",
     "sass-resources-loader": "^2.0.0",
     "style-loader": "^1.0.0",
+    "ts-jest": "^25.3.1",
     "ts-loader": "^6.2.1",
-    "ts-mocha": "^7.0.0",
     "typescript": "^3.6.4",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.3.2",
