--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack --config ./webpack.prod.js",
     "build:dev": "webpack --config ./webpack.dev.js",
     "lint": "eslint ./src",
-    "test": "mocha"
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -44,8 +44,8 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
+    "jest": "^26.0.1",
     "lint-staged": "^9.4.2",
-    "mocha": "^6.2.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "sass-resources-loader": "^2.0.0",
