--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && npm test"
+      "pre-commit": "pretty-quick --staged && lint-staged && npm test"
     }
   },
   "engines": {
@@ -47,6 +47,8 @@
     "jest": "^26.0.1",
     "lint-staged": "^9.4.2",
     "node-sass": "^4.12.0",
+    "prettier": "^2.0.5",
+    "pretty-quick": "^2.0.1",
     "sass-loader": "^8.0.0",
     "sass-resources-loader": "^2.0.0",
     "style-loader": "^1.0.0",
