--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,4 @@
 {
-  "presets": [
-    ["@babel/preset-env", { "targets": "> 0.25%, not dead" }]
-  ],
-  "plugins": [
-    "@babel/plugin-proposal-class-properties",
-    "lodash"
-  ]
+  "presets": [["@babel/preset-env", { "targets": "> 0.25%, not dead" }]],
+  "plugins": ["@babel/plugin-proposal-class-properties", "lodash"]
 }
