--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "node": ">=12.0.0 <13.0.0"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx}": [
+    "(src|stories)/**/*.{js,jsx}": [
       "eslint"
     ]
   },
