--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "normalize.css": "^8.0.1"
   }
 }
